added callout and product update methode

--- a/force-app/main/default/lwc/orderManagement/orderManagement.html
+++ b/force-app/main/default/lwc/orderManagement/orderManagement.html
@@ -1,4 +1,26 @@
 <template>
-    -----{recordId}----- 
-    {refRecordId}
+
+    <div if:true={account}>
+        <lightning-card variant="narrow">
+                <lightning-layout>
+                    <lightning-layout-item  size="5" padding="around-small">
+                        <div>{account.Name}</div>
+                    </lightning-layout-item>
+                    <lightning-layout-item  size="5" padding="around-small">
+                        <div>{account.AccountNumber}</div>
+                    </lightning-layout-item>
+                    <lightning-layout-item  size="1" padding="around-small">
+                        <div>
+                            <lightning-button variant="brand" label="Create Product" onclick={createProduct} disabled={isDisabledButton}></lightning-button>
+                        </div>
+                    </lightning-layout-item>
+                    <lightning-layout-item  size="1" padding="around-small">
+                        <div>
+                            <lightning-button variant="brand" label="Cart" onclick={handleClick}></lightning-button>
+                        </div>
+                    </lightning-layout-item>
+                </lightning-layout>
+        </lightning-card>
+    </div>
+
 </template>
