create a form for creating a new product

--- a/force-app/main/default/lwc/orderManagement/orderManagement.html
+++ b/force-app/main/default/lwc/orderManagement/orderManagement.html
@@ -11,7 +11,7 @@
                     </lightning-layout-item>
                     <lightning-layout-item  size="1" padding="around-small">
                         <div>
-                            <lightning-button variant="brand" label="Create Product" onclick={createProduct} disabled={isDisabledButton}></lightning-button>
+                            <lightning-button variant="brand" label="Create Product" onclick={openModal} disabled={isDisabledButton}></lightning-button>
                         </div>
                     </lightning-layout-item>
                     <lightning-layout-item  size="1" padding="around-small">
@@ -22,5 +22,43 @@
                 </lightning-layout>
         </lightning-card>
     </div>
+
+    <template if:true={isModalOpen}>
+        <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true" aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
+            <div class="slds-modal__container">
+                <header class="slds-modal__header">
+                    <button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse" title="Close" onclick={closeModal}>
+                        <lightning-icon icon-name="utility:close"
+                            alternative-text="close"
+                            variant="inverse"
+                            size="small" ></lightning-icon>
+                        <span class="slds-assistive-text">Close</span>
+                    </button>
+                    <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Create a new Product</h2>
+                </header>
+                <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
+                    <lightning-record-edit-form object-api-name={productObject}>
+                        <lightning-messages></lightning-messages>
+                        <div class="slds-grid">
+                            <div class="slds-col slds-size_1-of-2">
+                                <lightning-input-field field-name={nameField}></lightning-input-field>
+                                <lightning-input-field field-name={typeField}></lightning-input-field>
+                                <lightning-input-field field-name={familyField}></lightning-input-field>
+                            </div>
+                            <div class="slds-col slds-size_1-of-2">
+                                <lightning-input-field field-name={imageField}></lightning-input-field>
+                                <lightning-input-field field-name={descriptionField}></lightning-input-field>
+                            </div>
+                         </div>
+                    </lightning-record-edit-form>
+                </div>
+                <footer class="slds-modal__footer">
+                    <button class="slds-button slds-button_neutral" onclick={closeModal} title="Cancel">Cancel</button>
+                    <button class="slds-button slds-button_brand" onclick={createProduct} title="Create">Create</button>
+                </footer>
+            </div>
+        </section>
+        <div class="slds-backdrop slds-backdrop_open"></div>
+    </template>
 
 </template>
