--- a/force-app/main/default/lwc/orderManagement/orderManagement.html
+++ b/force-app/main/default/lwc/orderManagement/orderManagement.html
@@ -41,13 +41,13 @@
                         <lightning-messages></lightning-messages>
                         <div class="slds-grid">
                             <div class="slds-col slds-size_1-of-2">
-                                <lightning-input-field field-name={nameField}></lightning-input-field>
-                                <lightning-input-field field-name={typeField}></lightning-input-field>
-                                <lightning-input-field field-name={familyField}></lightning-input-field>
+                                <lightning-input-field field-name={nameField} onchange={handleChangeFieldName}></lightning-input-field>
+                                <lightning-input-field field-name={typeField} onchange={handleChangeFieldType}></lightning-input-field>
+                                <lightning-input-field field-name={familyField} onchange={handleChangeFieldFamily}></lightning-input-field>
                             </div>
                             <div class="slds-col slds-size_1-of-2">
-                                <lightning-input-field field-name={imageField}></lightning-input-field>
-                                <lightning-input-field field-name={descriptionField}></lightning-input-field>
+                                <lightning-input-field field-name={imageField} onchange={handleChangeFieldImage}></lightning-input-field>
+                                <lightning-input-field field-name={descriptionField} onchange={handleChangeFieldDescription}></lightning-input-field>
                             </div>
                          </div>
                     </lightning-record-edit-form>
