--- a/force-app/main/default/lwc/orderManagement/orderManagement.html
+++ b/force-app/main/default/lwc/orderManagement/orderManagement.html
@@ -6,16 +6,16 @@
               <span>
                 <lightning-layout style="height: 94px;">
                     <lightning-layout-item style="text-align: center; align-self: center;" size="5" padding="around-small">
-                        {account.Name}
+                        <p><b>{account.Name}</b></p>
                     </lightning-layout-item>
                     <lightning-layout-item style="text-align: left; align-self: center;" size="5" padding="around-small">
-                        {account.AccountNumber}
+                        <p><b>{account.AccountNumber}</b></p>
                     </lightning-layout-item>
                     <lightning-layout-item style="align-self: center;" size="1" padding="around-small">  
-                        <lightning-button variant="brand" label="Create Product" onclick={openModal} disabled={isDisabledButton}></lightning-button>
+                        <button class="slds-button slds-button_brand buttonCreateProduct" onclick={openModal} disabled={isDisabledButton}>Create Product</button>
                     </lightning-layout-item>
                     <lightning-layout-item style="align-self: center;" size="1" padding="around-small">  
-                        <lightning-button variant="brand" label="Cart" onclick={handleClick}></lightning-button>      
+                        <button class="slds-button slds-button_brand buttonCart" onclick={handleClick} disabled={isDisabledButton}>Cart</button>
                     </lightning-layout-item>
                 </lightning-layout>
               </span> 
@@ -27,7 +27,35 @@
                 <span>1</span>
             </div>
             <div class="slds-col">
-                <div class="layoutSearch">2</div>
+                <div class="layoutSearch">
+
+
+
+                    <div class="slds-form-element">
+                        <div class="slds-form-element__control slds-input-has-icon slds-input-has-icon_left-right slds-input-has-icon_group-right">
+                          <svg class="slds-icon slds-input__icon slds-input__icon_left slds-icon-text-default" aria-hidden="true">
+                            <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"></use>
+                          </svg>
+                          <input type="text" id="text-input-id-47" placeholder="Search" class="slds-input" style="background-color: gray; color: black; " />
+                          <div class="slds-input__icon-group slds-input__icon-group_right">
+                            <div role="status" class="slds-spinner slds-spinner_brand slds-spinner_x-small slds-input__spinner">
+                              <span class="slds-assistive-text">Loading</span>
+                              <div class="slds-spinner__dot-a"></div>
+                              <div class="slds-spinner__dot-b"></div>
+                            </div>
+                            <button class="slds-button slds-button_icon slds-input__icon slds-input__icon_right" title="Clear">
+                              <svg class="slds-button__icon slds-icon-text-light" aria-hidden="true">
+                                <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#clear"></use>
+                              </svg>
+                              <span class="slds-assistive-text">Clear</span>
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+
+
+
+                </div>
                 <div class="layoutProduct">
                     <template if:true={products} for:each={products} for:item="product">
                         <div class="product" key={product.Id}>
