--- a/force-app/main/default/lwc/orderManagement/orderManagement.html
+++ b/force-app/main/default/lwc/orderManagement/orderManagement.html
@@ -15,7 +15,7 @@
                         <button class="slds-button slds-button_brand buttonCreateProduct" onclick={openModal} disabled={isDisabledButton}>Create Product</button>
                     </lightning-layout-item>
                     <lightning-layout-item style="align-self: center;" size="1" padding="around-small">  
-                        <button class="slds-button slds-button_brand buttonCart" onclick={handleClick} disabled={isDisabledButton}>Cart</button>
+                        <button class="slds-button slds-button_brand buttonCart" onclick={openModalCart} disabled={isDisabledButton}>Cart</button>
                     </lightning-layout-item>
                 </lightning-layout>
               </span> 
@@ -106,6 +106,7 @@
                             <div class="slds-col slds-size_1-of-2">
                                 <lightning-input-field field-name={imageField} onchange={handleChangeFieldImage}></lightning-input-field>
                                 <lightning-input-field field-name={descriptionField} onchange={handleChangeFieldDescription}></lightning-input-field>
+                                <lightning-input-field field-name={priceField} onchange={handleChangeFieldPrice}></lightning-input-field>
                             </div>
                          </div>
                     </lightning-record-edit-form>
@@ -144,6 +145,7 @@
                             <div class="slds-col slds-size_1-of-2">
                                 <lightning-output-field field-name={imageField.fieldApiName}></lightning-output-field>
                                 <lightning-output-field field-name={descriptionField.fieldApiName}></lightning-output-field>
+                                <lightning-output-field field-name={priceField.fieldApiName}></lightning-output-field>
                             </div>
                          </div>
                     </lightning-record-view-form>
@@ -157,6 +159,36 @@
         <div class="slds-backdrop slds-backdrop_open"></div>
     </template>
 
+
+
+
+
+
+    <!-- <template if:true={isModalCart}>
+        <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true" aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
+            <div class="slds-modal__container">
+                <header class="slds-modal__header">
+                    <button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse" title="Close" onclick={closeModalCart}>
+                        <lightning-icon icon-name="utility:close"
+                            alternative-text="close"
+                            variant="inverse"
+                            size="small" ></lightning-icon>
+                        <span class="slds-assistive-text">Close</span>
+                    </button>
+                    <h2 id="modal-heading-03" class="slds-text-heading_medium slds-hyphenate">Cart</h2>
+                </header>
+                <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-3">
+                    
+                </div>
+                <footer class="slds-modal__footer">
+                    <button class="slds-button slds-button_neutral" onclick={closeModalCart} title="Cancel">Cancel</button>
+                    <button class="slds-button slds-button_brand" onclick={closeModalCart} title="Checkout">Checkout</button>
+                </footer>
+            </div>
+        </section>
+        <div class="slds-backdrop slds-backdrop_open"></div>
+    </template>
+ -->
 
 
 
