--- a/force-app/main/default/lwc/orderManagement/orderManagement.html
+++ b/force-app/main/default/lwc/orderManagement/orderManagement.html
@@ -70,7 +70,7 @@
                     <template if:true={products} for:each={products} for:item="product">
                         <div class="product" key={product.Id}>
                             <p style="text-align: center; margin-top: 50px; font-size: 20px; "><b>{product.Name}</b></p>
-                            <p style="left: 20px; top: 100px; font-size: 15px; position: absolute;"><b>{product.Description__c}</b></p>
+                            <p style="left: 20px; top: 100px; font-size: 15px; position: absolute; overflow-y: auto; width: 220px; height: 70px; word-wrap: break-word; scrollbar-color: gray"><b>{product.Description__c}</b></p>
                             <button onclick={openModalProductDetails} data-productid={product.Id} style="position: absolute; bottom: 15px; left: 15px; border: 2px solid black; width: 80px; height: 40px; font-size: 12px; background-color: gray;"><b>Details</b></button>
                             <button onclick={addProductToCart} data-productid={product.Id} data-productname={product.Name} data-productprice={product.Price__c} style="position: absolute; bottom: 15px; right: 15px; border: 2px solid black; width: 80px; height: 40px; font-size: 12px; background-color: gray;"><b>Add</b></button>
                         </div>
